Add missing config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,3 +16,12 @@ spring:
       FAIL_ON_EMPTY_BEANS: false
     time-zone: UTC
 
+
+app:
+  jwtSecret: secret
+  jwtExpirationInMs: 3600000
+
+server:
+  port: 8083
+
+
